Changelog
=========

1.3 (unreleased)
----------------

- Nothing changed yet.


1.2 (2012-04-11)
----------------

- Show description of the Faq subfolders.
  [maurits]

- Added module alias to support older content locations
  [tom_gross]

- Added migrator for BTree based folder implementation
  [tom_gross]

- Added minimal tests
  [tom_gross]

1.1.2 (2011-01-04)
------------------

- Nothing changed yet.


1.1.1 (2011-01-04)
------------------

- FaqFolder and FaqEntry are ATCT based now
  [naro]
  
- replaced i18n directory with locales. Existing translations are preserved.
  [naro]
  
- i18n cleanup
  [naro]
