@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<rolemap>
+  <permissions>
+    <permission name="Products.Faq: Add FaqEntry" acquire="True">
+      <role name="Contributor" />
+      <role name="Manager" />
+      <role name="Site Administrator" />
+    </permission>
+    <permission name="Products.Faq: Add FaqFolder" acquire="True">
+      <role name="Contributor"/>
+      <role name="Manager"/>
+      <role name="Site Administrator" />
+    </permission>
+  </permissions>
+</rolemap>
