@@ -4,7 +4,8 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Added rolemap. Now Contributors can add FaqEntries and FaqFolders
+  [cekk]
 
 
 1.2 (2012-04-11)
